# kursach

C++Projects/: C++Projects.workspace  Makefile
C++Projects/.codelite/: C++Projects.session
C++Projects/kurs/: .gitignore  CMakeLists.txt  fixed_test_client  kurs.mk  kurs.project  kurs.txt  main.cpp  server  server.cpp  server.h  server_tests  simple_test  test_client  test_server.cpp
C++Projects/kurs/Debug/: fixed_test_client.cpp.o.d  main.cpp.o.d  server.cpp.o.d  simple_connection_test.cpp.o.d  test_client.cpp.o.d  test_server.cpp.o.d
